Default loottables and loottable adjustment